<resources>
    <string name="app_name"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bottom_permission_text">Storage access permission is required to
        scan and play media files on the device.</string>
    <string name="title_activity_main__navigation_">Main_Navigation_Activity</string>

    <!--Navigation Item Title-->
    <string name="nav_home_title">Home</string>
    <string name="nav_music_title">Music</string>
    <string name="nav_video_title">Video</string>
    <string name="nav_directories_title">Directories</string>
    <string name="nav_playlist_title">Playlist</string>
    <string name="nav_setting_title">Setting</string>
    <string name="nav_rate_title">Rate-Us</string>

    <!--Title of Screen-->
    <string name="home_title">Home</string>
    <string name="music_title">Music</string>
    <string name="video_title">Video</string>
    <string name="directories_title">Directories</string>
    <string name="playlist_title">Playlist</string>

    <string name="recently_played_heading">Recently Played</string>
    <string name="most_played_heading">Most Played</string>
    <string name="recently_added_heading">Recently Added</string>
    <string name="play_queue_heading">Play Queue</string>
    <string name="more_button">More</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sample_string">PlayerUnknowns Battlegrounds (PUBG) is an online multiplayer battle royale game developed and published by PUBG Corporation, a subsidiary of South Korean video game company Bluehole. The game is based on previous mods that were created by Brendan "PlayerUnknown" Greene for other games using the film Battle Royale for inspiration, and expanded into a standalone game under Greenes creative direction. In the game, up to one hundred players parachute onto an island and scavenge for weapons and equipment to kill others while avoiding getting killed themselves. The available safe area of the games map decreases in size over time, directing surviving players into tighter areas to force encounters. The last player or team standing wins the round.
The game was released for Microsoft Windows via Steams early access beta program in March 2017, with a full release on December 20, 2017. That same month, the game was released by Microsoft Studios for the Xbox One via its Xbox Game Preview program. A few months later, it was localized and released by Tencent Games in China, while two mobile versions based on the game for Android and iOS were also released. The game is one of the bestselling of all time, with over fifty million sold across all platforms by June 2018. In addition, the Windows version holds a peak concurrent player count of over three million on Steam, which is an all-time high on the platform.Battlegrounds received several positive reviews from critics during both its early access period and on final release; reviewers found that while the game still was not fully finished and had some technical flaws, Battlegrounds presented new types of gameplay that could be easily approached by players of any skill level and was highly replayable. The game received several Game of the Year nominations among other accolades, and is considered by Greene to be the defining game of the battle royale genre. Several other video games, following in Battlegroundss success, added battle royale-style modes, while a number of clones, primarily out of China, also appeared. PUBG Corporation has run several small tournaments and introduced in-game tools to help with broadcasting the game to spectators, as they wish for it to become a popular eSport.PlayerUnknowns Battlegrounds (PUBG) is an online multiplayer battle royale game developed and published by PUBG Corporation, a subsidiary of South Korean video game company Bluehole. The game is based on previous mods that were created by Brendan "PlayerUnknown" Greene for other games using the film Battle Royale for inspiration, and expanded into a standalone game under Greenes creative direction. In the game, up to one hundred players parachute onto an island and scavenge for weapons and equipment to kill others while avoiding getting killed themselves. The available safe area of the games map decreases in size over time, directing surviving players into tighter areas to force encounters. The last player or team standing wins the round.
The game was released for Microsoft Windows via Steams early access beta program in March 2017, with a full release on December 20, 2017. That same month, the game was released by Microsoft Studios for the Xbox One via its Xbox Game Preview program. A few months later, it was localized and released by Tencent Games in China, while two mobile versions based on the game for Android and iOS were also released. The game is one of the bestselling of all time, with over fifty million sold across all platforms by June 2018. In addition, the Windows version holds a peak concurrent player count of over three million on Steam, which is an all-time high on the platform.Battlegrounds received several positive reviews from critics during both its early access period and on final release; reviewers found that while the game still was not fully finished and had some technical flaws, Battlegrounds presented new types of gameplay that could be easily approached by players of any skill level and was highly replayable. The game received several Game of the Year nominations among other accolades, and is considered by Greene to be the defining game of the battle royale genre. Several other video games, following in Battlegroundss success, added battle royale-style modes, while a number of clones, primarily out of China, also appeared. PUBG Corporation has run several small tournaments and introduced in-game tools to help with broadcasting the game to spectators, as they wish for it to become a popular eSport.
    PlayerUnknowns Battlegrounds (PUBG) is an online multiplayer battle royale game developed and published by PUBG Corporation, a subsidiary of South Korean video game company Bluehole. The game is based on previous mods that were created by Brendan "PlayerUnknown" Greene for other games using the film Battle Royale for inspiration, and expanded into a standalone game under Greenes creative direction. In the game, up to one hundred players parachute onto an island and scavenge for weapons and equipment to kill others while avoiding getting killed themselves. The available safe area of the games map decreases in size over time, directing surviving players into tighter areas to force encounters. The last player or team standing wins the round.
    The game was released for Microsoft Windows via Steams early access beta program in March 2017, with a full release on December 20, 2017. That same month, the game was released by Microsoft Studios for the Xbox One via its Xbox Game Preview program. A few months later, it was localized and released by Tencent Games in China, while two mobile versions based on the game for Android and iOS were also released. The game is one of the bestselling of all time, with over fifty million sold across all platforms by June 2018. In addition, the Windows version holds a peak concurrent player count of over three million on Steam, which is an all-time high on the platform.Battlegrounds received several positive reviews from critics during both its early access period and on final release; reviewers found that while the game still was not fully finished and had some technical flaws, Battlegrounds presented new types of gameplay that could be easily approached by players of any skill level and was highly replayable. The game received several Game of the Year nominations among other accolades, and is considered by Greene to be the defining game of the battle royale genre. Several other video games, following in Battlegroundss success, added battle royale-style modes, while a number of clones, primarily out of China, also appeared. PUBG Corporation has run several small tournaments and introduced in-game tools to help with broadcasting the game to spectators, as they wish for it to become a popular eSport.PlayerUnknowns Battlegrounds (PUBG) is an online multiplayer battle royale game developed and published by PUBG Corporation, a subsidiary of South Korean video game company Bluehole. The game is based on previous mods that were created by Brendan "PlayerUnknown" Greene for other games using the film Battle Royale for inspiration, and expanded into a standalone game under Greenes creative direction. In the game, up to one hundred players parachute onto an island and scavenge for weapons and equipment to kill others while avoiding getting killed themselves. The available safe area of the games map decreases in size over time, directing surviving players into tighter areas to force encounters. The last player or team standing wins the round.
    The game was released for Microsoft Windows via Steams early access beta program in March 2017, with a full release on December 20, 2017. That same month, the game was released by Microsoft Studios for the Xbox One via its Xbox Game Preview program. A few months later, it was localized and released by Tencent Games in China, while two mobile versions based on the game for Android and iOS were also released. The game is one of the bestselling of all time, with over fifty million sold across all platforms by June 2018. In addition, the Windows version holds a peak concurrent player count of over three million on Steam, which is an all-time high on the platform.Battlegrounds received several positive reviews from critics during both its early access period and on final release; reviewers found that while the game still was not fully finished and had some technical flaws, Battlegrounds presented new types of gameplay that could be easily approached by players of any skill level and was highly replayable. The game received several Game of the Year nominations among other accolades, and is considered by Greene to be the defining game of the battle royale genre. Several other video games, following in Battlegroundss success, added battle royale-style modes, while a number of clones, primarily out of China, also appeared. PUBG Corporation has run several small tournaments and introduced in-game tools to help with broadcasting the game to spectators, as they wish for it to become a popular eSport.</string>


</resources>
