<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Home"
            android:icon="@drawable/home"
            android:title="@string/nav_home_title"
            />
        <item
            android:id="@+id/nav_Music"
            android:icon="@drawable/music"
            android:title="@string/nav_music_title" />
        <item
            android:id="@+id/nav_Video"
            android:icon="@drawable/video"
            android:title="@string/nav_video_title" />
        <item
            android:id="@+id/nav_Folder"
            android:icon="@drawable/folder"
            android:title="@string/nav_directories_title" />
        <item
            android:id="@+id/nav_Playlists"
            android:icon="@drawable/playlist"
            android:title="@string/nav_playlist_title" />
    </group>
    <group android:id="@+id/grp2" android:checkableBehavior="single" >
            <item
                android:id="@+id/nav_Setting"
                android:icon="@drawable/setting"
                android:title="@string/nav_setting_title" />
            <item
                android:id="@+id/nav_Rate_Us"
                android:icon="@drawable/rate_us"
                android:title="@string/nav_rate_title" />

    </group>
</menu>
